--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,26 @@ button.ink.active {
   opacity: 1;
 }
 
+.fade {
+  transition: opacity 10000ms ease;
+  opacity: 0;
+}
+
+/* .print {
+  transition: opacity 10000ms ease;
+  opacity: 0;
+} */
+
+.print.p0 {
+  transition: opacity 10000ms ease;
+  opacity: 0;
+}
+
+.p0 {
+  opacity: 0;
+  transition: opacity 10000ms ease;
+}
+
 /*UB*/
 .p1, .a1 {   
   background: url(http://www.oxleberry.com/interactive/screenprints/teo/images/p1.png); 
@@ -423,55 +443,34 @@ footer li a:hover {
 
 /*ANIMATION*/
 .slideRT {
-  -webkit-animation: slideRT 1.5s ease-in-out 1 forwards;
-          animation: slideRT 1.5s ease-in-out 1 forwards;
+  animation: slideRT 1.5s ease-in-out 1 forwards;
 }
 
 .slideLT {
-  -webkit-animation: slideLT 1.5s ease-in-out 1 forwards;
-          animation: slideLT 1.5s ease-in-out 1 forwards;
-}
-
-@-webkit-keyframes slideRT {
-  0% {
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px);
-  }  
-  100% {
-      -webkit-transform: translateX(102%);
-              transform: translateX(102%);
-  }  
-}
-
-@-webkit-keyframes slideLT {
-  0% {
-      -webkit-transform: translateX(102%);
-              transform: translateX(102%);
-  }  
-  100% {
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px);
-  }  
+  animation: slideLT 1.5s ease-in-out 1 forwards;
 }
 
 @keyframes slideRT {
   0% {
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px);
+    transform: translateX(0px);
   }  
+  
   100% {
-      -webkit-transform: translateX(102%);
-              transform: translateX(102%);
+    transform: translateX(102%);
   }  
 }
 
 @keyframes slideLT {
   0% {
-      -webkit-transform: translateX(102%);
-              transform: translateX(102%);
-  }  
+    transform: translateX(102%);
+  }
+
+  85% {
+    opacity: 0.7;
+  }
+  
   100% {
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px);
+    transform: translateX(0px);
+    opacity: 0;
   }  
 }
