--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,21 +1,106 @@
-
 body {
   background: #ddd7d2;
-  text-align: center;
 }
 
-h2 {
-  color: #70665f;
-  font-family: 'Futura', sans-serif; 
-  font-size: 4.5rem;
-  margin-bottom: 25px;   
-}
+.sep-breakdown-app {
+  h2 {
+    color: #70665f;
+    font-family: 'Futura', sans-serif; 
+    font-size: 4.5rem;
+    margin-bottom: 25px;
+    text-align: center;
+  }
 
-/*MAIN SECTIONS*/
-.inkGroup, 
-.printGroup, 
-.bitmapGroup, 
-.artGroup {
-  display: flex;
-  justify-content: center;
+  /*MAIN SECTIONS*/
+  .inkGroup, 
+  .printGroup, 
+  .bitmapGroup, 
+  .artGroup {
+    display: flex;
+    justify-content: center;
+  }
+
+  /*CHANGE BACKGROUND TO SHIRT COLORS*/
+  .wrap {
+    background: black;
+    box-shadow: 0px 40px 60px -20px rgba(0, 0, 0, 0.3);
+    margin-bottom: 50px;
+    margin: 0px auto;
+    padding: 16px;
+    text-align: center;
+    vertical-align: middle;
+  }
+
+  /*CHANGE BACKGROUND TO SHIRT COLORS*/
+  .artGroup {
+    background-color: #232323;
+  }
+
+  .printGroup {
+    border: 2px solid #474747;  
+  }
+
+  .bitmapGroup { 
+    border: 2px solid #474747;
+  }
+
+  .artGroup {
+    border: 2px solid #474747;
+  }
+
+  .screenprint{
+    .slideRT {
+      animation: slideRT 1.5s ease-in-out 1 forwards;
+    }
+    
+    .slideLT {
+      animation: slideLT 1.5s ease-in-out 1 forwards;
+    }
+    
+    @keyframes slideRT {
+      0% {
+        transform: translateX(0px);
+      }  
+      
+      100% {
+        transform: translateX(102%);
+      }  
+    }
+    
+    @keyframes slideLT {
+      0% {
+        transform: translateX(102%);
+      }
+    
+      85% {
+        opacity: 0.7;
+      }
+      
+      100% {
+        opacity: 0;
+        transform: translateX(0px);
+      }  
+    }
+  }
+
+  /*FOOTER - LINKS TO OTHER EXAMPLES*/
+  footer ul li{
+    float: left;
+    font-family: "Century Gothic", "Helvetica", sans-serif;  
+    list-style: none;   
+    padding: 0px 36px 0px 0px;
+  }
+
+  footer .right {
+    float: right;
+  }
+
+  footer li, footer li a:link, footer li a:visited {
+    color: #b2a9a2;
+    text-decoration: none;
+  }
+
+  footer li a:hover {
+    color: rgba(112, 102, 95, 0.9);
+  }
 }
