--- a/src/styles/ink-button-list.scss
+++ b/src/styles/ink-button-list.scss
@@ -96,4 +96,13 @@
   .reset {
     background: rgba(255, 255, 255, 0.2);
   }
+
+  .ink-overview {
+    height: 25px;
+    width: 100%;
+    border-radius: 0px;
+    font-weight: bold;
+    font-size: 1.4rem;   
+    font-family: sans-serif;  
+  }
 }
