--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,32 +3,36 @@ body {
 }
 
 .sep-breakdown-app {
+  section {
+    margin-top: 5rem;
+  }
+
   h2 {
     color: #70665f;
-    font-family: 'Futura', sans-serif; 
+    font-family: 'Futura', sans-serif;
     font-size: 4.5rem;
     margin-bottom: 25px;
     text-align: center;
   }
 
-  /*MAIN SECTIONS*/
-  .inkGroup, 
-  .printGroup, 
-  .bitmapGroup, 
-  .artGroup {
-    display: flex;
-    justify-content: center;
-  }
-
   /*CHANGE BACKGROUND TO SHIRT COLORS*/
-  .wrap {
+  .wrap, // TODO: remove after refactor
+  .shirt-wrapper {
     background: black;
     box-shadow: 0px 40px 60px -20px rgba(0, 0, 0, 0.3);
     margin-bottom: 50px;
     margin: 0px auto;
     padding: 16px;
-    text-align: center;
     vertical-align: middle;
+  }
+
+  /*MAIN SECTIONS*/
+  .inkGroup,
+  .printGroup,
+  .bitmapGroup,
+  .artGroup {
+    display: flex;
+    justify-content: center;
   }
 
   /*CHANGE BACKGROUND TO SHIRT COLORS*/
@@ -37,10 +41,10 @@ body {
   }
 
   .printGroup {
-    border: 2px solid #474747;  
+    border: 2px solid #474747;
   }
 
-  .bitmapGroup { 
+  .bitmapGroup {
     border: 2px solid #474747;
   }
 
@@ -48,46 +52,47 @@ body {
     border: 2px solid #474747;
   }
 
-  .screenprint{
+  .printGroup,
+  .bitmapGroup {
     .slideRT {
       animation: slideRT 1.5s ease-in-out 1 forwards;
     }
-    
+
     .slideLT {
       animation: slideLT 1.5s ease-in-out 1 forwards;
     }
-    
+
     @keyframes slideRT {
       0% {
         transform: translateX(0px);
-      }  
-      
+      }
+
       100% {
         transform: translateX(102%);
-      }  
+      }
     }
-    
+
     @keyframes slideLT {
       0% {
         transform: translateX(102%);
       }
-    
+
       85% {
         opacity: 0.7;
       }
-      
+
       100% {
         opacity: 0;
         transform: translateX(0px);
-      }  
+      }
     }
   }
 
   /*FOOTER - LINKS TO OTHER EXAMPLES*/
   footer ul li{
     float: left;
-    font-family: "Century Gothic", "Helvetica", sans-serif;  
-    list-style: none;   
+    font-family: "Century Gothic", "Helvetica", sans-serif;
+    list-style: none;
     padding: 0px 36px 0px 0px;
   }
 
