--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -1,33 +1,31 @@
 .intro {
-  margin-top: 5rem;
-
-  .innerWrap {
+  &__content-container {
     background-color: white;
     border: 2px solid #474747;
     display: flex;
     justify-content: center;
   }
-  
-  .description-container, 
-  .image-container {
+
+  &__desc-container,
+  &__img-container {
     display: flex;
     height: 200px;
     justify-content: center;
     margin: 5px;
-    padding: 5px; 
+    padding: 5px;
     position: relative;
     width: 50%;
   }
-  
+
   p {
     color: #b7b5b2;
     font-family: Futura;
     font-size: 1.8rem;
     margin: auto;
   }
-  
-  .image {
-    background: url(http://www.oxleberry.com/interactive/screenprints/teo/images/tee.jpg) center no-repeat; 
+
+  &__img {
+    background: url(http://www.oxleberry.com/interactive/screenprints/teo/images/tee.jpg) center no-repeat;
     background-size: 200px;
     height: 100%;
     width: 100%;
