--- a/src/styles/ink-button-list.scss
+++ b/src/styles/ink-button-list.scss
@@ -8,7 +8,7 @@ $color-5: #ffffff;
 .ink-button-list {
   text-align: center;
 
-  .color-1 { /* underbase */
+  .color-1 {
     background: $color-1;
   }
 
