--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,4 +3,5 @@
 @import './app.scss';
 @import './ink-button-list.scss';
 @import './intro.scss';
+@import './overview.scss';
 @import './side-by-side.scss';
