--- a/src/styles/overview.scss
+++ b/src/styles/overview.scss
@@ -1,7 +1,7 @@
 .overview-image-list {
-  // Shirt color var:
+  // Shirt Color Variables
   $shirt-color: black;
-  // Image Variables:
+  // Image Variables
   $img-all: 'http://www.oxleberry.com/interactive/screenprints/teo/images/pAll.png';
   $img1: 'http://www.oxleberry.com/interactive/screenprints/teo/images/p1.png';
   $img2: 'http://www.oxleberry.com/interactive/screenprints/teo/images/p2.png';
