--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -1,4 +1,7 @@
 .intro {
+  // T-Shirt Image Variables
+  $img-tee: 'http://www.oxleberry.com/interactive/screenprints/teo/images/tee.jpg';
+
   &__content-container {
     background-color: white;
     border: 2px solid #474747;
@@ -25,7 +28,9 @@
   }
 
   &__img {
-    background: url(http://www.oxleberry.com/interactive/screenprints/teo/images/tee.jpg) center no-repeat;
+    background: url($img-tee);
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: 200px;
     height: 100%;
     width: 100%;
