--- a/src/styles/side-by-side.scss
+++ b/src/styles/side-by-side.scss
@@ -1,3 +1,7 @@
+// This file contains styling for both the
+// print-image-list & bitmap-image-list versions.
+// bitmap-image-list Variables below vvv
+
 .print-image-list {
   // Image Variables
   $img-all: 'http://www.oxleberry.com/interactive/screenprints/teo/images/pAll.png';
@@ -110,7 +114,6 @@
     height: 500px;
   }
 
-  /*ALL*/
   .img-all {
     background: url($img-all);
     opacity: 1;
@@ -160,35 +163,20 @@
   }
 }
 
+// Animation
 .print-image-list,
 .bitmap-image-list {
-  .slideRT {
-    animation: slideRT 1.5s ease-in-out 1 forwards;
-  }
-
-  .slideLT {
-    animation: slideLT 1.5s ease-in-out 1 forwards;
-  }
+  .slideRT { animation: slideRT 1.5s ease-in-out 1 forwards; }
+  .slideLT { animation: slideLT 1.5s ease-in-out 1 forwards; }
 
   @keyframes slideRT {
-    0% {
-      transform: translateX(0px);
-    }
-
-    100% {
-      transform: translateX(102%);
-    }
+    0% { transform: translateX(0px); }
+    100% { transform: translateX(102%); }
   }
 
   @keyframes slideLT {
-    0% {
-      transform: translateX(102%);
-    }
-
-    85% {
-      opacity: 0.7;
-    }
-
+    0% { transform: translateX(102%); }
+    85% { opacity: 0.7; }
     100% {
       opacity: 0;
       transform: translateX(0px);
