--- a/src/styles/ink-button-list.scss
+++ b/src/styles/ink-button-list.scss
@@ -9,7 +9,6 @@
   $btn-width-sm: 10%;
   $btn-width-md: 10%;
 
-
   text-align: center;
   display: flex;
   justify-content: center;
@@ -36,6 +35,10 @@
 
   .color-reset {
     background: rgba(255, 255, 255, 0.2);
+  }
+
+  .white {
+    background: white;
   }
 
   /* INK BUTTONS */
@@ -107,6 +110,7 @@
     font-size: 1.4rem;
     font-weight: bold;
     height: 25px;
+    line-height: 2.8rem;
     width: 100%;
   }
 }
